feat: support for HTTP transport